--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <title>Kanban</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 
 <body>
-    <button id="addBoardButton">Dodaj</button>
-    <button id="removeBoardButton">Usuń</button>
+    <button id="addBoardButton" class="onlyAddButton">Dodaj</button>
+    <button id="removeBoardButton" class="bothButtons removeButtonHidden">Usuń</button>
     <div id="boards"></div>
 </body>
 
